--- a/scss/partials/_custom.scss
+++ b/scss/partials/_custom.scss
@@ -1,4 +1,11 @@
+$primary: #c32c72;
+
 $card-bg: #f4f3ee;
 $card-border-radius: 15px;
 
 $body-bg: #e5e5e5;
+
+$navbar-light-brand-color: #262626;
+$nav-tabs-link-active-color: $primary;
+$navbar-light-active-color: $primary;
+$navbar-brand-font-size: 1.8rem;
