--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -1,14 +1,5 @@
-// Variables
-$primary: #c32c72;
+@import "variables";
 
-// Body
-$body-bg: #e5e5e5;
-
-// Card
-$card-bg: #f4f3ee;
-$card-border-radius: 15px;
-
-// Navbar
 $navbar-light-brand-color: #262626;
 $nav-tabs-link-active-color: #c32c72;
 $navbar-light-active-color: #c32c72;
