--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "partials/custom";
+@import "./partials/nav";
 
 @import "../bootstrap-scss/functions";
+
 @import "../bootstrap-scss/variables";
 @import "../bootstrap-scss/mixins";
 @import "../bootstrap-scss/root";
